--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>MEMORY GAME</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="img/img-3.png">
 </head>
 <body>
   <div class="wrapper">
@@ -138,6 +139,11 @@
         </div>
       </li>
     </ul>
+    <nav>
+      <div>Time: <strong id="TimeSnd">20</strong>s</div>
+      <div>Flips: <strong id="fCount">0</strong></div>
+      <button id="Refresh">Refresh</button>
+    </nav>
   </div>
   <script src="index.js"></script>
 </body>
