--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>MEMORY GAME</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="img/img-3.png">
+  <script src="https://kit.fontawesome.com/2cb2c6d57e.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="wrapper">
@@ -142,7 +143,7 @@
     <nav>
       <div>Time: <strong id="TimeSnd">20</strong>s</div>
       <div>Flips: <strong id="fCount">0</strong></div>
-      <button id="Refresh">Refresh</button>
+      <button id="Refresh"><i class="fa-solid fa-arrow-rotate-right"></i></button>
     </nav>
   </div>
   <script src="index.js"></script>
