--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script src="https://kit.fontawesome.com/2cb2c6d57e.js" crossorigin="anonymous"></script>
 </head>
 <body>
+  <section>
   <div class="wrapper">
     <ul class="cards">
       <li class="card">
@@ -146,6 +147,11 @@
       <button id="Refresh"><i class="fa-solid fa-arrow-rotate-right"></i></button>
     </nav>
   </div>
+  <div id="paletteWrap">
+    <div id="palette"></div>
+    <div id="paletteArrow"><button><i class="fa-solid fa-angle-right"></i></button></div>
+  </div>
+  </section>
   <script src="index.js"></script>
 </body>
 </html>
