--- a/index.html
+++ b/index.html
@@ -148,7 +148,14 @@
     </nav>
   </div>
   <div id="paletteWrap">
-    <div id="palette"></div>
+    <div id="palette">
+      <button class="paletteColor"></button>
+      <button class="paletteColor"></button>
+      <button class="paletteColor"></button>
+      <button class="paletteColor"></button>
+      <button class="paletteColor"></button>
+      <button class="paletteColor"></button>
+    </div>
     <div id="paletteArrow"><button><i class="fa-solid fa-angle-right"></i></button></div>
   </div>
   </section>
